<resources>
    <string name="app_name">EIS</string>

    <string name="hello_text">
        "Привіт, користувачу!\n\nЛаскаво просимо до додатку для вивчення"
        "алгоритму сортування вставками \n\"EIS - Educational Insertion Sort\"! Сортування є однією з"
        "найбільш базових, але важливих концепцій в програмуванні та обчислювальній науці. Цей "
        "алгоритм є основою для розуміння більш складних алгоритмів та їх застосувань.\n\n\n"
        "Ти готовий починати?"
    </string>

    <string name="start_btn_text">"Почати"</string>
    <string name="exit_snackbar">"Натисніть ще раз щоб вийти"</string>
    <string name="go_back_snackbar">"Натисніть ще раз щоб повернутися до розділу"</string>
    <string name="tips_card">"Порада до вивчення"</string>

    <string name="tipsToLearn1">"Розбийте велику задачу на менші для кращого розуміння алгоритму"</string>
    <string name="tipsToLearn2">"Зрозумійте, як Insertion Sort відрізняється від інших алгоритмів сортування"</string>
    <string name="tipsToLearn3">"Візуалізуйте кожний крок алгоритму, це допоможе зрозуміти його поведінку"</string>
    <string name="tipsToLearn4">"Практикуйте на різних наборах даних, включаючи відсортовані, невідсортовані та збалансовані набори"</string>
    <string name="tipsToLearn5">"Застосовуйте Insertion Sort у реальних проектах, щоб краще зрозуміти його переваги та недоліки"</string>
    <string name="tipsToLearn6">"Проводьте час на аналізі часової складності, щоб знати, коли краще використовувати Insertion Sort"</string>
    <string name="tipsToLearn7">"Ламайте код. Помилки — це засіб для навчання"</string>
    <string name="tipsToLearn8">"Знайте свої інструменти. Вивчення скорочень клавіш у вашому IDE може значно підвищити вашу продуктивність"</string>
    <string name="tipsToLearn9">"Зробіть паузи. Ваш мозок потребує відпочинку для ефективного навчання"</string>
    <string name="tipsToLearn10">"Обговорюйте концепції алгоритму з іншими, це допомагає закріпити знання"</string>
    <string name="tipsToLearn11">"Дон\'t over-optimize. Спершу зробіть код працездатним, потім оптимізованим"</string>
    <string name="tipsToLearn12">"Вивчайте з документації. Офіційна документація - один з найкращих ресурсів для глибокого розуміння"</string>
    <string name="tipsToLearn13">"Розумійте, що "чистий код" - це не завжди \"короткий код\""</string>
    <string name="tipsToLearn14">"Регулярно перевіряйте свої знання. Самооцінка дуже важлива"</string>
    <string name="tipsToLearn15">"Вивчайте з прикладами. Теорія без практики рідко є ефективною"</string>
    <string name="tipsToLearn16">"Пробуйте викладати. Навчання інших допомагає краще зрозуміти матеріал"</string>
    <string name="tipsToLearn17">"Використовуйте юніт-тести для перевірки коректності вашого коду"</string>
    <string name="tipsToLearn18">"Зберігайте рівновагу між навчанням та відпочинком"</string>
    <string name="tipsToLearn19">"Робіть резервні копії вашого коду. Версійний контроль може врятувати вас в критичних ситуаціях"</string>
    <string name="tipsToLearn20">"Не бійтеся запитань. Якщо щось незрозуміло, краще запитати, ніж просто здогадуватися"</string>
    <string name="theoretical_part">"Теорія"</string>
    <string name="practice_part">"Практика"</string>
    <string name="education_text_label">"Навчання"</string>
    <string name="progress_text_label">"Прогрес"</string>
    <string name="settings">"Налаштування"</string>
    <string name="statistic_text_label">"Статистика"</string>
    <string name="statistic_test_7d">"Кількість правильний відповідей\nза 7 днів"</string>
    <string name="reset_progress_text">"Скинути прогрес"</string>

    <string name="theory_screen_label">"Розділ теорії"</string>
    <string name="practice_screen_label">"Розділ практики"</string>

<!--    TEST TEXT-->
    <string name="lvl1_label">"Частина 1"</string>
    <string name="lvl1_title">"Основи Сортування Вставками"</string>
    <string name="lvl1_desc">
        "Введення"

        "\n\nСортування вставками (Insertion Sort) — це один з найпростіших алгоритмів сортування, "
        "що відтворює спосіб, як люди сортують картки в руках. Він працює на принципі вставки "
        "окремих елементів на правильне місце в відсортованій частині масиву."

        "\n\n"Для кого підходить цей алгоритм?"

        "\n\nЦей алгоритм ефективно працює на невеликих наборах даних або на даних, які вже частково відсортовані."

        "\n\nОсновні Характеристики"
        "\n- Тип алгоритму: Компаративний (порівнює елементи між собою)"
        "\n- Часова Складність: В худшому і середньому випадках — O(n^2), в найкращому — O(n)"
        "\n- Стійкість: Стійкий (зберігає відносний порядок однакових елементів)"

        "\n\nКлючові Терміни"
        "\n- Відсортована частина: Частина масиву, де всі елементи вже відсортовані."
        "\n- Не відсортована частина: Частина масиву, де елементи ще не відсортовані."

        "\n\nРобочий Принцип"
        "\n1. Ініціалізація: Починаємо з першого елемента масиву і вважаємо його відсортованим."
        "\n2. Вибір Елемента: Вибираємо наступний елемент з не відсортованої частини масиву."
        "\n3. Порівняння і Вставка*: Порівнюємо цей елемент з елементами в відсортованій частині масиву,"
        "\nі вставляємо його на відповідне місце так, щоб масив залишався відсортованим."
        "\n4. Повтор: Процес повторюється для кожного елемента в не відсортованій частині масиву."

        "\n\nПсевдокод"
        "\nfor i from 1 to n-1"
        "\n\t\t\tj = i"
        "\n\t\t\twhile j > 0 and array[j-1] > array[j]"
        "\n\t\t\t\t\t\tswap array[j] and array[j-1]"
        "\n\t\t\t\t\t\tj = j - 1"
    </string>
    <!--    TEST TEXT END -->

    <string name="complete_part_text">"Ознайомився"</string>
    <string name="count_question_text">"Кількість питань: %s"</string>
    <string name="next_question_text">"Відповісти"</string>
    <string name="current_question_num">"Питання %s з %s"</string>
    <string name="result_text">"Результат"</string>
    <string name="question_text">"Питання"</string>
    <string name="answer_test">"Відповідь"</string>
    <string name="right_answer_text">"Правильна Відповідь"</string>
    <string name="explanation_text">"Пояснення"</string>

    <string name="no_answer_text">"Не дано відповідь"</string>
    <string name="count_right_answer">"%s Питань з %s"</string>

</resources>

